JumpScript/tests/baselines/reference/exportDeclarationsInAmbientNamespaces2.errors.txt
tests/cases/compiler/exportDeclarationsInAmbientNamespaces2.jump(6,23): error TS1194: Export declarations are not permitted in a namespace.


==== tests/cases/compiler/exportDeclarationsInAmbientNamespaces2.jump (1 errors) ====
    declare module "mod" {
        export var x: number;
    }
    
    declare namespace N {
        export { x } from "mod"; // Error
                          ~~~~~
!!! error TS1194: Export declarations are not permitted in a namespace.
    }
    
    